// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusItems snapshot tests should render a single status item correctly 1`] = `
<div
  className="status-items"
  style={{}}
>
  <StatusItem
    key="0"
    statusItem={
      {
        "comment": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum condimentum lorem consectetur eleifend.",
        "status": "Approved",
        "substatus": "Approval letter sent",
        "timestamp": 1598385600,
      }
    }
  />
</div>
`;

exports[`StatusItems snapshot tests should render empty status items correctly 1`] = `
<div
  className="status-items"
  style={{}}
/>
`;

exports[`StatusItems snapshot tests should render multiple status items correctly 1`] = `
<div
  className="status-items"
  style={{}}
>
  <StatusItem
    key="0"
    statusItem={
      {
        "comment": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum condimentum lorem consectetur eleifend.",
        "status": "Approved",
        "substatus": "Approval letter sent",
        "timestamp": 1598385600,
      }
    }
  />
  <StatusItem
    key="1"
    statusItem={
      {
        "comment": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum condimentum lorem consectetur eleifend.",
        "status": "Approved",
        "substatus": "Unit selected",
        "timestamp": 1598299200,
      }
    }
  />
  <StatusItem
    key="2"
    statusItem={
      {
        "comment": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum condimentum lorem consectetur eleifend.",
        "status": "Approved",
        "substatus": "Waiting for subsidy inspection",
        "timestamp": 1598212800,
      }
    }
  />
  <StatusItem
    key="3"
    statusItem={
      {
        "comment": null,
        "status": "Waitlisted",
        "substatus": "Written confirmation sent",
        "timestamp": 1598126400,
      }
    }
  />
  <StatusItem
    key="4"
    statusItem={
      {
        "comment": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum condimentum lorem consectetur eleifend.",
        "status": "Lease Signed",
        "substatus": null,
        "timestamp": 1598040000,
      }
    }
  />
  <StatusItem
    key="5"
    statusItem={
      {
        "comment": null,
        "status": "Lease Signed",
        "substatus": null,
        "timestamp": 1597953600,
      }
    }
  />
</div>
`;

exports[`StatusItems snapshot tests should render multiple status items with limit 0 correctly 1`] = `
<div
  className="status-items"
  style={{}}
/>
`;

exports[`StatusItems snapshot tests should render multiple status items with limit 1 correctly 1`] = `
<div
  className="status-items"
  style={{}}
>
  <StatusItem
    key="0"
    statusItem={
      {
        "comment": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum condimentum lorem consectetur eleifend.",
        "status": "Approved",
        "substatus": "Approval letter sent",
        "timestamp": 1598385600,
      }
    }
  />
</div>
`;

exports[`StatusItems snapshot tests should render multiple status items with limit 100 correctly 1`] = `
<div
  className="status-items"
  style={{}}
>
  <StatusItem
    key="0"
    statusItem={
      {
        "comment": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum condimentum lorem consectetur eleifend.",
        "status": "Approved",
        "substatus": "Approval letter sent",
        "timestamp": 1598385600,
      }
    }
  />
  <StatusItem
    key="1"
    statusItem={
      {
        "comment": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum condimentum lorem consectetur eleifend.",
        "status": "Approved",
        "substatus": "Unit selected",
        "timestamp": 1598299200,
      }
    }
  />
  <StatusItem
    key="2"
    statusItem={
      {
        "comment": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum condimentum lorem consectetur eleifend.",
        "status": "Approved",
        "substatus": "Waiting for subsidy inspection",
        "timestamp": 1598212800,
      }
    }
  />
  <StatusItem
    key="3"
    statusItem={
      {
        "comment": null,
        "status": "Waitlisted",
        "substatus": "Written confirmation sent",
        "timestamp": 1598126400,
      }
    }
  />
  <StatusItem
    key="4"
    statusItem={
      {
        "comment": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum condimentum lorem consectetur eleifend.",
        "status": "Lease Signed",
        "substatus": null,
        "timestamp": 1598040000,
      }
    }
  />
  <StatusItem
    key="5"
    statusItem={
      {
        "comment": null,
        "status": "Lease Signed",
        "substatus": null,
        "timestamp": 1597953600,
      }
    }
  />
</div>
`;
